// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitClientSingleFile (package arm) > matches the golden output for a small model 1`] = `
"// Generated by @redocly/client-generator — do not edit by hand.
// Source: OpenAPI document. Re-run \`redocly generate-client\` to update.

/**
 * T (v1.0.0)
 */

import { createClient, type OperationDescriptor, type RequestOptions, type SseOptions } from '@redocly/client-generator';

export type Order = {
    id: string;
};

export type Problem = {};

export type Pet = {};

export type OrderEvent = {};

export type GetOrderResult = Order;

export type GetOrderParams = {
    expand?: string;
};

export type GetOrderVariables = {
    orderId: string;
    params?: GetOrderParams;
};

/**
 * Per-operation \`args\`/\`result\` shapes (plus \`kind: 'sse'\` for event streams) — the
 * type-level companion of \`OPERATIONS\` that gives \`createClient<Ops>\` its typed methods.
 */
export type Ops = {
    getOrder: {
        args: {
            orderId: string;
            params?: GetOrderParams;
        };
        result: GetOrderResult;
    };
    streamEvents: {
        args: {};
        result: OrderEvent;
        kind: "sse";
    };
};

/**
 * The wire-shape descriptor for every operation, keyed by operationId — the data the
 * runtime routes requests by. Also minification-safe static metadata (method, path,
 * tags) for cache keys, tracing span names, and request logging.
 */
export const OPERATIONS = {
    getOrder: { id: "getOrder", method: "GET", path: "/orders/{orderId}", tags: ["Orders"], params: [{ name: "orderId", in: "path" }, { name: "expand", in: "query" }], security: [[{ scheme: "bearerAuth", kind: "bearer" }]] },
    streamEvents: { id: "streamEvents", method: "GET", path: "/events", responseKind: "sse", sseDataKind: "json" }
} as const satisfies Record<string, OperationDescriptor>;

export type OperationId = keyof typeof OPERATIONS;

export type OperationPath = (typeof OPERATIONS)[OperationId]["path"];

export type OperationTag = Extract<(typeof OPERATIONS)[OperationId], {
    tags: readonly string[];
}>["tags"][number];

export const client = createClient<Ops, OperationId, OperationPath, OperationTag>(OPERATIONS, { serverUrl: "https://cafe.example.com" });

export const { configure, use } = client;
export const setBearer = client.auth.bearer;
export const getOrder = (orderId: string, params: {
    expand?: string;
} = {}, init: RequestOptions = {}) => client.getOrder({ orderId, params }, init);
export const streamEvents = (init: SseOptions = {}) => client.streamEvents({}, init);

export { ApiError, createClient } from '@redocly/client-generator';
export type { ClientConfig, Middleware, RequestOptions, ServerSentEvent, SseOptions } from '@redocly/client-generator';
"
`;

exports[`emitClientSingleFile — pagination > matches the golden output for a paginated package client 1`] = `
"// Generated by @redocly/client-generator — do not edit by hand.
// Source: OpenAPI document. Re-run \`redocly generate-client\` to update.

/**
 * T (v1.0.0)
 */

import { createClient, type OperationDescriptor, type RequestOptions } from '@redocly/client-generator';

export type Order = {};

export type Problem = {};

export type Pet = {};

export type OrderEvent = {};

export type OrderPage = {
    orders: Order[];
    nextCursor?: string;
};

export type ListOrdersResult = OrderPage;

export type ListOrdersParams = {
    cursor?: string;
    limit?: string;
};

export type ListOrdersVariables = {
    params?: ListOrdersParams;
};

export type GetOrderResult = Order;

export type GetOrderParams = {
    expand?: string;
};

export type GetOrderVariables = {
    orderId: string;
    params?: GetOrderParams;
};

/**
 * Per-operation \`args\`/\`result\` shapes (plus \`kind: 'sse'\` for event streams) — the
 * type-level companion of \`OPERATIONS\` that gives \`createClient<Ops>\` its typed methods.
 */
export type Ops = {
    listOrders: {
        args: {
            params?: ListOrdersParams;
        };
        result: ListOrdersResult;
        item: Order;
    };
    getOrder: {
        args: {
            orderId: string;
            params?: GetOrderParams;
        };
        result: GetOrderResult;
    };
};

/**
 * The wire-shape descriptor for every operation, keyed by operationId — the data the
 * runtime routes requests by. Also minification-safe static metadata (method, path,
 * tags) for cache keys, tracing span names, and request logging.
 */
export const OPERATIONS = {
    listOrders: { id: "listOrders", method: "GET", path: "/orders", params: [{ name: "cursor", in: "query" }, { name: "limit", in: "query" }], pagination: { style: "cursor", param: "cursor", nextCursor: "/nextCursor", items: "/orders" } },
    getOrder: { id: "getOrder", method: "GET", path: "/orders/{orderId}", tags: ["Orders"], params: [{ name: "orderId", in: "path" }, { name: "expand", in: "query" }] }
} as const satisfies Record<string, OperationDescriptor>;

export type OperationId = keyof typeof OPERATIONS;

export type OperationPath = (typeof OPERATIONS)[OperationId]["path"];

export type OperationTag = Extract<(typeof OPERATIONS)[OperationId], {
    tags: readonly string[];
}>["tags"][number];

export const client = createClient<Ops, OperationId, OperationPath, OperationTag>(OPERATIONS, { serverUrl: "https://api.example.com" });

export const { configure, use } = client;
export const listOrders = Object.assign((params: {
    cursor?: string;
    limit?: string;
} = {}, init: RequestOptions = {}) => client.listOrders({ params }, init), { pages: client.listOrders.pages, items: client.listOrders.items });
export const getOrder = (orderId: string, params: {
    expand?: string;
} = {}, init: RequestOptions = {}) => client.getOrder({ orderId, params }, init);

export { ApiError, createClient } from '@redocly/client-generator';
export type { ClientConfig, Middleware, RequestOptions } from '@redocly/client-generator';
"
`;

exports[`emitClientSingleFile — pagination > matches the golden output for a result-mode paginated package client 1`] = `
"// Generated by @redocly/client-generator — do not edit by hand.
// Source: OpenAPI document. Re-run \`redocly generate-client\` to update.

/**
 * T (v1.0.0)
 */

import { createClient, type OperationDescriptor, type RequestOptions, type Result } from '@redocly/client-generator';

export type Order = {};

export type Problem = {};

export type Pet = {};

export type OrderEvent = {};

export type OrderPage = {
    orders: Order[];
    nextCursor?: string;
};

export type ListOrdersResult = OrderPage;

export type ListOrdersParams = {
    cursor?: string;
    limit?: string;
};

export type ListOrdersVariables = {
    params?: ListOrdersParams;
};

export type GetOrderResult = Order;

export type GetOrderError = Problem;

export type GetOrderParams = {
    expand?: string;
};

export type GetOrderVariables = {
    orderId: string;
    params?: GetOrderParams;
};

/**
 * Per-operation \`args\`/\`result\` shapes (plus \`kind: 'sse'\` for event streams) — the
 * type-level companion of \`OPERATIONS\` that gives \`createClient<Ops>\` its typed methods.
 */
export type Ops = {
    listOrders: {
        args: {
            params?: ListOrdersParams;
        };
        result: Result<ListOrdersResult, unknown>;
        item: Order;
        page: ListOrdersResult;
    };
    getOrder: {
        args: {
            orderId: string;
            params?: GetOrderParams;
        };
        result: Result<GetOrderResult, GetOrderError>;
    };
};

/**
 * The wire-shape descriptor for every operation, keyed by operationId — the data the
 * runtime routes requests by. Also minification-safe static metadata (method, path,
 * tags) for cache keys, tracing span names, and request logging.
 */
export const OPERATIONS = {
    listOrders: { id: "listOrders", method: "GET", path: "/orders", params: [{ name: "cursor", in: "query" }, { name: "limit", in: "query" }], pagination: { style: "cursor", param: "cursor", nextCursor: "/nextCursor", items: "/orders" } },
    getOrder: { id: "getOrder", method: "GET", path: "/orders/{orderId}", tags: ["Orders"], params: [{ name: "orderId", in: "path" }, { name: "expand", in: "query" }] }
} as const satisfies Record<string, OperationDescriptor>;

export type OperationId = keyof typeof OPERATIONS;

export type OperationPath = (typeof OPERATIONS)[OperationId]["path"];

export type OperationTag = Extract<(typeof OPERATIONS)[OperationId], {
    tags: readonly string[];
}>["tags"][number];

export const client = createClient<Ops, OperationId, OperationPath, OperationTag>(OPERATIONS, { serverUrl: "https://api.example.com", errorMode: "result" });

export const { configure, use } = client;
export const listOrders = Object.assign((params: {
    cursor?: string;
    limit?: string;
} = {}, init: RequestOptions = {}) => client.listOrders({ params }, init), { pages: client.listOrders.pages, items: client.listOrders.items });
export const getOrder = (orderId: string, params: {
    expand?: string;
} = {}, init: RequestOptions = {}) => client.getOrder({ orderId, params }, init);

export { ApiError, createClient } from '@redocly/client-generator';
export type { ClientConfig, Middleware, RequestOptions, Result } from '@redocly/client-generator';
"
`;
